--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,28 +7,42 @@
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="16" />
-    <uses-permission android:name="android.permission.BATTERY_STATS"/>
-    <uses-permission android:name="android.permission.PERSISTENT_ACTIVITY"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-<application android:allowBackup="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:theme="@style/AppTheme">
-        <activity android:name=".TalkerMainActivity" android:label="@string/app_name" android:screenOrientation="landscape">
+
+    <uses-permission android:name="android.permission.BATTERY_STATS" />
+    <uses-permission android:name="android.permission.PERSISTENT_ACTIVITY" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".TalkerMainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+             android:icon="@drawable/app_icon" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity android:name=".SettingsActivity" android:label="@string/title_activity_settings" android:screenOrientation="landscape">
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:screenOrientation="landscape" >
         </activity>
-        
-        <activity android:name=".NewSceneActivity" android:label="@string/title_activity_new_scene" android:screenOrientation="landscape">
+        <activity
+            android:name=".NewSceneActivity"
+            android:label="@string/title_activity_new_scene"
+            android:screenOrientation="landscape" >
         </activity>
-        
-         <activity android:name=".CanvasActivity" android:label="@string/new_scene_start" android:screenOrientation="landscape">
+        <activity
+            android:name=".CanvasActivity"
+            android:label="@string/new_scene_start"
+            android:screenOrientation="landscape" >
         </activity>
     </application>
-
-    
 
 </manifest>
