--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,6 +48,11 @@
             android:label="@string/conversation_history"
             android:screenOrientation="landscape" >
         </activity>
+        <activity
+            android:name=".TalkerAndroidDataBase"
+            android:screenOrientation="landscape" >
+        </activity>
+        
     </application>
 
 </manifest>
