--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,7 +52,11 @@
             android:name=".TalkerAndroidDataBase"
             android:screenOrientation="landscape" >
         </activity>
-        
+        <activity
+            android:name=".UserSettingActivity"
+            android:label="@string/title_activity_settings"
+            android:screenOrientation="landscape" >
+        </activity>
     </application>
 
 </manifest>
