--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -29,6 +29,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:icon="@drawable/app_icon"
             android:name=".NewSceneActivity"
             android:label="@string/title_activity_new_scene"
             android:screenOrientation="landscape" >
@@ -39,6 +40,7 @@
             android:screenOrientation="landscape" >
         </activity>
          <activity
+            android:icon="@drawable/app_icon"
             android:name=".HistoricalActivity"
             android:label="@string/conversation_history"
             android:screenOrientation="landscape" >
@@ -48,6 +50,7 @@
             android:screenOrientation="landscape" >
         </activity>
         <activity
+            android:icon="@drawable/app_icon"
             android:name=".UserSettingActivity"
             android:label="@string/title_activity_settings"
             android:screenOrientation="landscape" >
