--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,9 +19,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".TalkerMainActivity"
+            android:icon="@drawable/app_icon"
             android:label="@string/app_name"
-            android:screenOrientation="landscape"
-             android:icon="@drawable/app_icon" >
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,8 +29,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:icon="@drawable/app_icon"
             android:name=".NewSceneActivity"
+            android:icon="@drawable/app_icon"
             android:label="@string/title_activity_new_scene"
             android:screenOrientation="landscape" >
         </activity>
@@ -39,9 +39,9 @@
             android:label="@string/new_scene_start"
             android:screenOrientation="landscape" >
         </activity>
-         <activity
-            android:icon="@drawable/app_icon"
+        <activity
             android:name=".HistoricalActivity"
+            android:icon="@drawable/app_icon"
             android:label="@string/conversation_history"
             android:screenOrientation="landscape" >
         </activity>
@@ -50,37 +50,44 @@
             android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:icon="@drawable/app_icon"
             android:name=".UserSettingActivity"
+            android:icon="@drawable/app_icon"
             android:label="@string/title_activity_settings"
             android:screenOrientation="landscape" >
-        </activity> 
+        </activity>
         <activity
+            android:name=".MannerOfUseActivity"
             android:icon="@drawable/app_icon"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
             android:name=".NewCategoryImageActivity"
+            android:icon="@drawable/app_icon"
             android:label="@string/insert_image_title"
             android:screenOrientation="landscape" >
             <intent-filter>
-           		<action android:name=".activities.NewCategoryImageActivity" />
-           		<category android:name="android.intent.category.DEFAULT" />
-       		</intent-filter>
+                <action android:name=".activities.NewCategoryImageActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
-          <activity
-            android:icon="@drawable/app_icon"
+        <activity
             android:name=".NewCategoryContactActivity"
+            android:icon="@drawable/app_icon"
             android:label="@string/insert_contact_title"
             android:screenOrientation="landscape" >
             <intent-filter>
-           		<action android:name=".activities.NewCategoryContactActivity" />
-           		<category android:name="android.intent.category.DEFAULT" />
-       		</intent-filter>
+                <action android:name=".activities.NewCategoryContactActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
-            android:icon="@drawable/app_icon"
             android:name=".ImageSettingsActivity"
+            android:icon="@drawable/app_icon"
             android:label="@string/insert_image_title"
             android:screenOrientation="landscape" >
-        </activity> 
+        </activity>
     </application>
 
 </manifest>
