[MISC] Configuro parametros por default

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:name=".UserSettingActivity"
+            android:name=".MyPreferenceActivity"
             android:icon="@drawable/app_icon"
             android:label="@string/title_activity_settings"
             android:screenOrientation="landscape" >
